--- a/homeDir/dotConfig/hypr/hyprland.conf
+++ b/homeDir/dotConfig/hypr/hyprland.conf
@@ -30,7 +30,9 @@ $fileManager = dolphin
 $dmenu = rofi -show drun -theme nord
 $menu = rofi -show run -theme nord
 $cliphist = cliphist list | rofi -dmenu -theme nord | cliphist decode | wl-copy
+
 $screenShot = /home/chris/WORKFLOW/homeDir/dotScript/screenShot.sh
+$switchSinks = /home/chris/WORKFLOW/homeDir/dotScript/switchSinks.sh
 
 $browser = google-chrome-stable --gtk-version=4
 $xunlian = wine /home/chris/myApps/Xunlian/xunlian.exe
@@ -190,6 +192,7 @@ bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, V, exec, $cliphist
 bind = $mainMod CTRL, Q, exit
 bind = $mainMod, M, togglefloating,
+bind = $mainMod, F, fullscreen
 bind = $mainMod, D, exec, $dmenu
 bind = $mainMod, R, exec, $menu
 
@@ -259,7 +262,8 @@ bindm = $mainMod, mouse:273, resizewindow
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMute, exec, $switchSinks
+# bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
