--- a/homeDir/dotConfig/hypr/hyprland.conf
+++ b/homeDir/dotConfig/hypr/hyprland.conf
@@ -35,7 +35,8 @@ $screenShot = /home/chris/WORKFLOW/homeDir/dotScript/screenShot.sh
 $switchSinks = /home/chris/WORKFLOW/homeDir/dotScript/switchSinks.sh
 
 $browser = google-chrome-stable --gtk-version=4
-$xunlian = wine /home/chris/myApps/Xunlian/xunlian.exe
+$office = /home/chris/AppI/DesktopEditors-x86_64.AppImage
+
 
 
 #################
@@ -242,7 +243,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, F1, movetoworkspace, 1
 bind = $mainMod, F2, exec, $screenShot
 bind = $mainMod, F3, exec, $browser
-bind = $mainMod, F4, movetoworkspace, 4
+bind = $mainMod, F4, exec, $office
 bind = $mainMod, F5, exec, hyprctl reload
 bind = $mainMod, F6, movetoworkspace, 6
 bind = $mainMod, F7, movetoworkspace, 7
