--- a/homeDir/dotConfig/yazi/keymap.toml
+++ b/homeDir/dotConfig/yazi/keymap.toml
@@ -51,10 +51,8 @@ keymap = [
 	{ on = [ "<S-a>" ],   run = "select_all --state=none",            desc = "Inverse selection of all files" },
 
 	# Operation
-	{ on = [ "o" ],         run = "open",                       desc = "Open the selected files" },
-	{ on = [ "O" ],         run = "open --interactive",         desc = "Open the selected files interactively" },
+	{ on = [ "o" ],         run = "open --interactive",         desc = "Open the selected files interactively" },
 	{ on = [ "<Enter>" ],   run = "open",                       desc = "Open the selected files" },
-	{ on = [ "<C-Enter>" ], run = "open --interactive",         desc = "Open the selected files interactively" },
 	{ on = [ "y" ],         run = "yank",                       desc = "Copy the selected files" },
 	{ on = [ "Y" ],         run = "unyank",                     desc = "Cancel the yank status of files" },
 	{ on = [ "x" ],         run = "yank --cut",                 desc = "Cut the selected files" },
