--- a/homeDir/dotConfig/yazi/yazi.toml
+++ b/homeDir/dotConfig/yazi/yazi.toml
@@ -1,5 +1,6 @@
 # A TOML linter such as https://taplo.tamasfe.dev/ can use this schema to validate your config.
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
+# 目前只设置了for linux
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
 [manager]
@@ -26,9 +27,12 @@ ueberzug_offset = [ 0, 0, 0, 0 ]
 
 [opener]
 edit = [
-	{ run = '${EDITOR:=nvim} "$@"', desc = "$EDITOR", block = true, for = "unix" },
-	{ run = 'code "%*"',    orphan = true, desc = "code",         for = "windows" },
-	{ run = 'code -w "%*"', block = true,  desc = "code (block)", for = "windows" },
+	{ run = 'nvim "$0"',    block = true,  desc = "nvim",        for = "unix" },
+	{ run = 'code "%0"',    orphan = true, desc = "code",        for = "windows" },
+	{ run = 'code -w "%0"', block = true,  desc = "code(block)", for = "windows" },
+    # %0用于表示悬停 %@全部选中 %n第n个
+    # orphan表示关闭yazi后依然存在
+    # block表示yazi等待程序运行结束
 ]
 open = [
 	{ run = 'xdg-open "$@"',                desc = "Open", for = "linux" },
@@ -46,18 +50,22 @@ extract = [
 	{ run = 'unar "%1"', desc = "Extract here", for = "windows" },
 ]
 play = [
-	{ run = 'mpv "$@"', orphan = true, for = "unix" },
+	{ run = 'mpv "$0"', orphan = true,for = "unix" },
 	{ run = 'mpv "%1"', orphan = true, for = "windows" },
 	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show media info", for = "unix" },
+]
+appimage = [
+	{ run = 'exec "$0"', orphan = true, desc = "Run AppImage", for = "unix" }
 ]
 
 [open]
 rules = [
 	{ name = "*/", use = [ "edit", "open", "reveal" ] },
+    { name = "*.AppImage", use = [ "appimage" ]},
 
 	{ mime = "text/*",          use = [ "edit", "reveal" ] },
 	{ mime = "image/*",         use = [ "open", "reveal" ] },
-	{ mime = "{audio,video}/*", use = [ "play", "reveal" ] },
+	{ mime = "{audio,video}/*", use = [ "play", "reveal", "vlc" ] },
 	{ mime = "inode/x-empty",   use = [ "edit", "reveal" ] },
 
 	{ mime = "application/*zip", use = [ "extract", "reveal" ] },
