--- a/homeDir/dotConfig/hypr/hyprland.conf
+++ b/homeDir/dotConfig/hypr/hyprland.conf
@@ -50,8 +50,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once= wl-paste --type text --watch cliphist store
 exec-once= wl-paste --type image --watch cliphist store
-
-exec-once = fcitx5 -d
+exec-once= ibus-daemon -d -r -x
 
 #############################
 ### ENVIRONMENT VARIABLES ###
