--- a/homeDir/dotConfig/waybar/config.jsonc
+++ b/homeDir/dotConfig/waybar/config.jsonc
@@ -13,6 +13,8 @@
         "hyprland/window"
     ],
     "modules-right": [
+        "clock",
+        "temperature"
     ],
     "hyprland/workspaces": {
         "format": "{icon}",
