--- a/homeDir/dotConfig/fcitx5/conf/classicui.conf
+++ b/homeDir/dotConfig/fcitx5/conf/classicui.conf
@@ -3,11 +3,11 @@ Vertical Candidate List=False
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="Sans 10"
+Font="霞鹜文楷等宽 15"
 # 菜单字体
-MenuFont="Sans 10"
+MenuFont="霞鹜文楷等宽 15"
 # 托盘字体
-TrayFont="Sans Bold 10"
+TrayFont="霞鹜文楷等宽 15"
 # 托盘标签轮廓颜色
 TrayOutlineColor=#000000
 # 托盘标签文本颜色
@@ -21,7 +21,7 @@ UseInputMethodLanguageToDisplayText=True
 # 主题
 Theme=Nord-Dark
 # 深色主题
-DarkTheme=default-dark
+DarkTheme=Nord-Dark
 # 跟随系统浅色/深色设置
 UseDarkTheme=False
 # 当被主题和桌面支持时使用系统的重点色
