--- a/homeDir/dotConfig/hypr/hyprland.conf
+++ b/homeDir/dotConfig/hypr/hyprland.conf
@@ -50,7 +50,8 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once= wl-paste --type text --watch cliphist store
 exec-once= wl-paste --type image --watch cliphist store
-exec-once= ibus-daemon -d -r -x
+
+exec-once = fcitx5 -d
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -70,10 +71,10 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 3
+    gaps_out = 5
 
-    border_size = 2
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -90,7 +91,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
