--- a/homeDir/dotConfig/yazi/yazi.toml
+++ b/homeDir/dotConfig/yazi/yazi.toml
@@ -6,7 +6,7 @@
 [manager]
 ratio          = [ 1, 4, 3 ]
 sort_by        = "alphabetical"
-sort_sensitive = false
+sort_sensitive = true
 sort_reverse   = false
 sort_dir_first = true
 linemode       = "none"
