--- a/homeDir/dotConfig/yazi/yazi.toml
+++ b/homeDir/dotConfig/yazi/yazi.toml
@@ -61,7 +61,9 @@ appimage = [
 [open]
 rules = [
 	{ name = "*/", use = [ "edit", "open", "reveal" ] },
-    { name = "*.AppImage", use = [ "appimage" ]},
+    { name = "*.AppImage", use = [ "appimage" ] },
+    { name = "*.css", use = [ "edit" ] },
+    { name = "*.html", use = [ "edit" ] },
 
 	{ mime = "text/*",          use = [ "edit", "reveal" ] },
 	{ mime = "image/*",         use = [ "open", "reveal" ] },
@@ -125,7 +127,7 @@ cd_origin = "top-center"
 cd_offset = [ 0, 2, 50, 3 ]
 
 # create
-create_title  = "Create:"
+create_title  = ["Create:", "Create (dir):"]
 create_origin = "top-center"
 create_offset = [ 0, 2, 50, 3 ]
 
